# readme-toc

./: README.md  pyproject.toml
src/readme_toc/: __init__.py  cli.py  parser.py  updater.py
tests/: test_cli.py  test_parser.py  test_updater.py
tests/fixtures/: sample.md
