[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readme-toc"
version = "1.0.0"
description = "Auto-generate table of contents for README.md files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "readme-toc contributors"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
readme-toc = "readme_toc.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/readme-toc"
Issues = "https://github.com/yourusername/readme-toc/issues"
